# kube-downscaler

./: pyproject.toml
kube_downscaler/: cmd.py  googlecalendar.py  helper.py  kubecalendar.py  main.py
tests/: test_calendar.py
tests/data/: events.json  services.json
